--- a/assets/pug/data/sidebar-menu.pug
+++ b/assets/pug/data/sidebar-menu.pug
@@ -432,7 +432,18 @@
                   {
                      icon:"Location",
                      title:"Map",   
-                     url:"map.html",
+                     url:"javascript:void(0)",
+                     subMenu:
+                        [
+                           {
+                              title:"Maps Js",
+                              url:"./maps-js.html",
+                           },
+                           {
+                              title:"Data Map",
+                              url:"./data-map.html",
+                           },
+                        ]
                   },
                ]
          },
