--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -16,6 +16,11 @@ if(dataMap)
   script(src="../../assets/js/map/data-map/datamaps.world.min.js")        
   script(src="../../assets/js/map/data-map/custom.js") 
 
+if(mapsJs)
+  // mapsJs js
+  script(src="../../assets/js/map/maps-js/leaflet.js")     
+  script(src="../../assets/js/map/maps-js/custom-map-1.js")     
+  script(src="../../assets/js/map/maps-js/custom-map-2.js")  
 
 if (fullCalender)
   // Full Calender Js 
