--- a/assets/pug/layout/header-files.pug
+++ b/assets/pug/layout/header-files.pug
@@ -62,6 +62,10 @@ head
     // textEditor css
     link(rel="stylesheet" href="../../assets/css/vendors/text-editor.css")
 
+  if(mapsJs)
+    // mapsJs css
+    link(rel="stylesheet", href="../../assets/css/vendors/leaflet.css")
+
   if(filepond)
     // filepond css
     link(rel="stylesheet" href="../../assets/css/vendors/filepond/filepond.css")
