--- a/assets/pug/pages/unique/knowledgebase.pug
+++ b/assets/pug/pages/unique/knowledgebase.pug
@@ -10,10 +10,6 @@
 //- customizer  
 -var customizer=true;
 
-//- apex-chart
--var apexChart=true;
--var uniqueApex=true; 
-
 //- Breadcrumbs
 -var pageTitle="Knowledgebase";
 -var breadcrumb=['Knowledgebase'];
@@ -50,7 +46,7 @@ html(lang='en')
                                     div.relative
                                         img(src="../../assets/images/svg/fiend.svg" alt="search-image" class="absolute bottom-[-63px] left-[94%] 6xl:w-[25%] lg:bottom-[-48px] 6xl:bottom-[-55px] xl:bottom-[-55px] w-[20%] xl:hidden")
                     div.grid.grid-cols-12.gap-card-gap.mt-6
-                        div.col-span-3(class="xl:col-span-4 lg:col-span-6 sm:col-span-12")
+                        div.col-span-3(class="4xl:col-span-4 lg:col-span-6 sm:col-span-12")
                             div.card.p-0
                                 div.card-image
                                     div.flex.justify-center.items-center
@@ -68,7 +64,7 @@ html(lang='en')
                                         a(href="blog-grid.html" class="flex items-center gap-1")
                                             p.text-content(class="text-xs") Liked by  
                                             span.text-primary(class="text-xs") Yen and 242 Others  
-                                        div.avatar-group.-space-x-5(class="2md:hidden sm:flex 2sm:hidden")
+                                        div.avatar-group.-space-x-4(class="2md:hidden sm:flex 2sm:hidden")
                                             div.avatar.border-white(class='border-2')
                                                 div.w-6
                                                     img(src='../../assets/images/avatar/15.jpg' alt='avatar')
@@ -84,7 +80,7 @@ html(lang='en')
                                             | earning Cash Back, features on ,
                                             | Why is my Cashback not updated in my ShopBack account?
 
-                        div.col-span-3(class="xl:col-span-4 lg:col-span-6 sm:col-span-12")
+                        div.col-span-3(class="4xl:col-span-4 lg:col-span-6 sm:col-span-12")
                             div.card.p-0
                                 div.card-image
                                     div.flex.justify-center.items-center
@@ -102,7 +98,7 @@ html(lang='en')
                                         a(href="blog-grid.html" class="flex items-center gap-1")
                                             p.text-content(class="text-xs") Liked by  
                                             span.text-primary(class="text-xs") Wilt and 126 Others  
-                                        div.avatar-group.-space-x-5(class="2md:hidden sm:flex 2sm:hidden")
+                                        div.avatar-group.-space-x-4(class="2md:hidden sm:flex 2sm:hidden")
                                             div.avatar.border-white(class='border-2')
                                                 div.w-6
                                                     img(src='../../assets/images/avatar/15.jpg' alt='avatar')
@@ -118,7 +114,7 @@ html(lang='en')
                                             | Online”Simple & secure way to transfer money 
                                             | to bank account & easily 
 
-                        div.col-span-3(class="xl:col-span-4 lg:col-span-6 sm:col-span-12")
+                        div.col-span-3(class="4xl:col-span-4 lg:col-span-6 sm:col-span-12")
                             div.card.p-0
                                 div.card-image
                                     div.flex.justify-center.items-center
@@ -136,7 +132,7 @@ html(lang='en')
                                         a(href="blog-grid.html" class="flex items-center gap-1")
                                             p.text-content(class="text-xs") Liked by  
                                             span.text-primary(class="text-xs") Bran and 186 Others  
-                                        div.avatar-group.-space-x-5(class="2md:hidden sm:flex 2sm:hidden")
+                                        div.avatar-group.-space-x-4(class="2md:hidden sm:flex 2sm:hidden")
                                             div.avatar.border-white(class='border-2')
                                                 div.w-6
                                                     img(src='../../assets/images/avatar/15.jpg' alt='avatar')
@@ -152,7 +148,7 @@ html(lang='en')
                                             | Approaches, Deep Learning Methods  
                                             | of cashback/rewards, reporting 
 
-                        div.col-span-3(class="xl:col-span-4 lg:col-span-6 sm:col-span-12")
+                        div.col-span-3(class="4xl:col-span-4 lg:col-span-6 sm:col-span-12")
                             div.card.p-0
                                 div.card-image
                                     div.flex.justify-center.items-center
@@ -170,7 +166,7 @@ html(lang='en')
                                         a(href="blog-grid.html" class="flex items-center gap-1")
                                             p.text-content(class="text-xs") Liked by  
                                             span.text-primary(class="text-xs") Dou and 96 Others  
-                                        div.avatar-group.-space-x-5(class="2md:hidden sm:flex 2sm:hidden")
+                                        div.avatar-group.-space-x-4(class="2md:hidden sm:flex 2sm:hidden")
                                             div.avatar.border-white(class='border-2')
                                                 div.w-6
                                                     img(src='../../assets/images/avatar/15.jpg' alt='avatar')
@@ -186,7 +182,7 @@ html(lang='en')
                                             | person to friends and family around the world
                                             | to more than 200 countries and territories from India  
 
-                        div.col-span-3(class="xl:col-span-4 lg:col-span-6 sm:col-span-12")
+                        div.col-span-3(class="4xl:col-span-4 lg:col-span-6 sm:col-span-12")
                             div.card.p-0
                                 div.card-image
                                     div.flex.justify-center.items-center
@@ -204,7 +200,7 @@ html(lang='en')
                                         a(href="blog-grid.html" class="flex items-center gap-1")
                                             p.text-content(class="text-xs") Liked by  
                                             span.text-primary(class="text-xs") Bets and 154 Others 
-                                        div.avatar-group.-space-x-5(class="2md:hidden sm:flex 2sm:hidden")
+                                        div.avatar-group.-space-x-4(class="2md:hidden sm:flex 2sm:hidden")
                                             div.avatar.border-white(class='border-2')
                                                 div.w-6
                                                     img(src='../../assets/images/avatar/15.jpg' alt='avatar')
@@ -220,7 +216,7 @@ html(lang='en')
                                             | CashBacks on every single spend. With the HDFC Bank 
                                             |  MoneyBack Credit Card, Rewarding You.  
 
-                        div.col-span-3(class="xl:col-span-4 lg:col-span-6 sm:col-span-12")
+                        div.col-span-3(class="4xl:col-span-4 lg:col-span-6 sm:col-span-12")
                             div.card.p-0
                                 div.card-image
                                     div.flex.justify-center.items-center
@@ -238,7 +234,7 @@ html(lang='en')
                                         a(href="blog-grid.html" class="flex items-center gap-1")
                                             p.text-content(class="text-xs") Liked by  
                                             span.text-primary(class="text-xs") Robed and 198 Others 
-                                        div.avatar-group.-space-x-5(class="2md:hidden sm:flex 2sm:hidden")
+                                        div.avatar-group.-space-x-4(class="2md:hidden sm:flex 2sm:hidden")
                                             div.avatar.border-white(class='border-2')
                                                 div.w-6
                                                     img(src='../../assets/images/avatar/15.jpg' alt='avatar')
@@ -254,7 +250,7 @@ html(lang='en')
                                             | back of your check to do so in their App.
                                             | You will need to detach the top part of the check. 
 
-                        div.col-span-3(class="xl:col-span-4 lg:col-span-6 sm:col-span-12")
+                        div.col-span-3(class="4xl:col-span-4 lg:col-span-6 sm:col-span-12")
                             div.card.p-0
                                 div.card-image
                                     div.flex.justify-center.items-center
@@ -272,7 +268,7 @@ html(lang='en')
                                         a(href="blog-grid.html" class="flex items-center gap-1")
                                             p.text-content(class="text-xs") Liked by  
                                             span.text-primary(class="text-xs") Virga and 126 Others 
-                                        div.avatar-group.-space-x-5(class="2md:hidden sm:flex 2sm:hidden")
+                                        div.avatar-group.-space-x-4(class="2md:hidden sm:flex 2sm:hidden")
                                             div.avatar.border-white(class='border-2')
                                                 div.w-6
                                                     img(src='../../assets/images/avatar/15.jpg' alt='avatar')
@@ -288,7 +284,7 @@ html(lang='en')
                                             | and controlling how much time to specific activities
                                             | Good time management enables an
 
-                        div.col-span-3(class="xl:col-span-4 lg:col-span-6 sm:col-span-12")
+                        div.col-span-3(class="4xl:col-span-4 lg:col-span-6 sm:col-span-12")
                             div.card.p-0
                                 div.card-image
                                     div.flex.justify-center.items-center
@@ -306,7 +302,7 @@ html(lang='en')
                                         a(href="blog-grid.html" class="flex items-center gap-1")
                                             p.text-content(class="text-xs") Liked by  
                                             span.text-primary(class="text-xs") Brent and 126 Others
-                                        div.avatar-group.-space-x-5(class="2md:hidden sm:flex 2sm:hidden")
+                                        div.avatar-group.-space-x-4(class="2md:hidden sm:flex 2sm:hidden")
                                             div.avatar.border-white(class='border-2')
                                                 div.w-6
                                                     img(src='../../assets/images/avatar/15.jpg' alt='avatar')
